--- a/deployment.yml
+++ b/deployment.yml
@@ -21,7 +21,7 @@ spec:
   replicas: 1 
   selector:
     matchLabels:
-      app: shorturl-pod
+      app: homepages-pod
   template:
     metadata:
       labels:
